Import of LOKI/Samba-Smbstatus-0.01 from CPAN.
gitpan-cpan-distribution: Samba-Smbstatus
gitpan-cpan-version:      0.01
gitpan-cpan-path:         LOKI/Samba-Smbstatus-0.01.tar.gz
gitpan-cpan-author:       LOKI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -29,4 +29,4 @@ resources:
   homepage: http://blog.laufeyjarson.com
   license: http://www.perlfoundation.org/artistic_license_2_0
   repository: https://github.com/laufeyjarson/samba-smbstatus.git
-version: 0.00_01
+version: '0.01'
